--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "brace-expansion": "^1.1.2",
     "browser-sync": "^1.5.7",
     "clone-stats": "0.0.1",
     "expect.js": "^0.3.1",
-    "gulp": "^3.8.5",
+    "gulp": "^3.9.0",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.6.3",
     "gulp-karma": "0.0.4",
@@ -34,9 +35,10 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.4.3",
+    "brace-expansion": "^1.1.2",
     "express": "^4.4.5",
     "jwt-simple": "^0.2.0",
-    "mongoose": "^3.8.12",
+    "mongoose": "^4.0.0",
     "morgan": "^1.1.1",
     "passport": "^0.2.0",
     "passport-local": "^1.0.0",
